--- a/src/pages/picture/picture.html
+++ b/src/pages/picture/picture.html
@@ -1,6 +1,8 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>FlickrBrowserIonic</ion-title>
+        <ion-title>
+            FlickrBrowserIonic
+        </ion-title>
     </ion-navbar>
 </ion-header>
 
